<resources>
    <string name="app_name">Club Hub</string>
    <string name="username_prompt">Name</string>
    <string name="password_prompt">Password</string>>
    <string name="login_button">Login</string>
    <string name="registration_prompt">No Account?</string>
    <string name="registration_button">Tap here!</string>
    <string name="createUsername_prompt">Create Name</string>
    <string name="createPassword_prompt">Create Password</string>
    <string name="confirmPassword_prompt">Confirm Password</string>
    <string name="createAccount_button">Start!</string>
    <string name="alreadyRegistered_prompt">Already Registered?</string>
    <string name="alreadyRegister_button">Login!</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="reload">Reload</string>
    <string name="add_spot_to_first">Add spot to first</string>
    <string name="add_spot_to_last">Add spot to last</string>
    <string name="remove_spot_from_first">Remove spot from first</string>
    <string name="remove_spot_from_last">Remove spot from last</string>
    <string name="replace_first_spot">Replace first spot</string>
    <string name="swap_first_for_last">Swap first for last</string>

</resources>
